Reduce mentions of 'integer' for 'natural'

--- a/biblio.bib
+++ b/biblio.bib
@@ -242,7 +242,7 @@
 }
 
 @misc{cryptoeprint:2024/961,
-      author = {Jeff Burdges and Alfonso Cevallos and Handan Kılınç Alper and Chen-Da Liu-Zhang and Fatemeh Shirazi and Alistair Stewart and Rob Habermeier and Robert Klotzner and Andronik Ordian},
+      author = {Burdges, Jeff and Cevallos, Alfonso and Kılınç Alper, Handan and Liu-Zhang, Chen-Da and Shirazi, Fatemeh and Stewart, Alistair and Habermeier, Rob and Klotzner, Robert and Ordian, Andronik},
       title = {Efficient Execution Auditing for Blockchains under Byzantine Assumptions},
       howpublished = {Cryptology ePrint Archive, Paper 2024/961},
       year = {2024},
