--- a/graypaper.tex
+++ b/graypaper.tex
@@ -57,7 +57,7 @@
 \input{text/pvm_invocations.tex}
 \input{text/serialization.tex}
 \input{text/merklization.tex}
-\input{text/shuffling.tex}
+\input{text/utilities.tex}
 \input{text/bandersnatch.tex}
 \input{text/erasure_coding.tex}
 
