--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -4,9 +4,9 @@
 
 \subsubsection{Regular Notation}
 \begin{description}
-  \item[$\N$] The set of positive integers including zero. Subscript denotes one greater than the maximum. See section \ref{sec:numbers}.
+  \item[$\N$] The set of non-negative integers. Subscript denotes one greater than the maximum. See section \ref{sec:numbers}.
   \begin{description}
-    \item[$\N^+$] The set of positive integers not including zero.
+    \item[$\N^+$] The set of positive integers (not including zero).
     \item[$\N_B$] The set of balance values. Equivalent to $\N_{2^{64}}$. See equation \ref{eq:balance}.
     \item[$\N_G$] The set of unsigned gas values. Equivalent to $\mathbb{N}_{2^{64}}$. See equation \ref{eq:gasregentry}.
     \item[$\N_L$] The set of blob length values. Equivalent to $\N_{2^{32}}$. See section \ref{sec:numbers}.
@@ -135,8 +135,9 @@
   %  \item[$\mathcal{J}$] Unused.
   \item[$\mathcal{K}(\dots)$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
   %  \item[$\mathcal{L}$] Unused.
-  \item[$\mathcal{M}_S(\dots)$] The binary Merklization function. See appendix \ref{sec:merklization}.
-  \item[$\mathcal{M}_S(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
+  \item[$\mathcal{M}(\dots)$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
+  \item[$\mathcal{M}_B(\dots)$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
+  \item[$\mathcal{M}_\sigma(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
   \item[$\mathcal{N}(\dots)$] The erasure-coding chunks function. See appendix \ref{sec:erasurecoding}.
   \item[$\mathcal{O}(\dots)$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\mathcal{P}_n(\dots)$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
@@ -149,7 +150,7 @@
   \item[$\mathcal{X}_n(\dots)$] The signed-extension function for a value in $\N_{2^{8n}}$. See equation \ref{eq:signedextension}.
   \item[$\mathcal{Y}(\dots)$] The alias/output/entropy function of a Bandersnatch \textsc{vrf} signature/proof. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\mathcal{Z}_n(\dots)$] The into-signed function for a value in $\N_{2^{8n}}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
-  \item[$\wp(\dots)$] Power set function.
+  \item[$\powset{\dots}$] Power set function.
 \end{description}
 
 \subsection{Values}
