--- a/preamble.tex
+++ b/preamble.tex
@@ -71,6 +71,7 @@
 \newcommand*\rem{\ \text{\scriptsize{\%}}\ }
 \newcommand*\remainder{\text{\hspace{2pt}\footnotesize{\textsf{R}}\hspace{2pt}}}
 \newcommand*\fold{\ \thicksim\mathchoice{\!\!\!\!\!\!\!}{\!\!\!\!\!\!}{\!\!\!\!\!\!}{\!\!\!\!\!\!}\int}
+\newcommand*{\powset}[2][{}]{\wp\left\langle#2\right\rangle_{#1}}
 \newcommand*{\sig}[2]{\mathbb{E}_{#1}\langle#2\rangle}
 \newcommand*{\bandersnatch}[3]{\bar{\mathbb{F}}_{#1}^{#3}\langle#2\rangle}
 \newcommand*{\bandersig}[3]{\mathbb{F}_{#1}^{#3}\langle#2\rangle}
