--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -1,8 +1,8 @@
-\section{State Serialization and Merklization}\label{sec:statemerklization}
+\section{State Merklization}\label{sec:statemerklization}
 
 The Merklization process defines a cryptographic commitment from which arbitrary information within state may be provided as being authentic in a concise and swift fashion. We describe this in two stages; the first defines a mapping from 32-octet sequences to (unlimited) octet sequences in a process called \emph{state serialization}. The second forms a 32-octet commitment from this mapping in a process called \emph{Merklization}.
 
-\subsection{State Serialization}
+\subsection{Serialization}
 
 The serialization of state primarily involves placing all the various components of $\sigma$ into a single mapping from 32-octet sequence \emph{state-keys} to octet sequences of indefinite length. The state-key is constructed from a hash component and a chapter component, equivalent to either the index of a state component or, in the case of the inner dictionaries of $\delta$, a service index.
 
@@ -43,13 +43,13 @@ The state serialization is then defined as the dictionary built from the amalgam
   \end{aligned}\right\}
 \end{equation}
 
-Note that most rows describe a single mapping between an integer-derived key and the serialization of a state component. However, the final four rows each define sets of mappings since these items act over all service accounts and in the case of the final three rows, the keys of a nested dictionary with the service.
+Note that most rows describe a single mapping between key derived from a natural and the serialization of a state component. However, the final four rows each define sets of mappings since these items act over all service accounts and in the case of the final three rows, the keys of a nested dictionary with the service.
 
-Also note that all non-discriminator integer serialization in state is done in fixed-length according to the size of the term.
+Also note that all non-discriminator numeric serialization in state is done in fixed-length according to the size of the term.
 
 \subsection{Merklization}
 
-With $T$ defined, we now define the rest of $\mathcal{M}_S$ which primarily involves transforming the serialized mapping into a cryptographic commitment. We define this commitment as the root of the binary Patricia Merkle Trie with a format optimized for modern compute hardware, primarily by optimizing sizes to fit succinctly into typical memory layouts and reducing the need for unpredictable branching.
+With $T$ defined, we now define the rest of $\mathcal{M}_\sigma$ which primarily involves transforming the serialized mapping into a cryptographic commitment. We define this commitment as the root of the binary Patricia Merkle Trie with a format optimized for modern compute hardware, primarily by optimizing sizes to fit succinctly into typical memory layouts and reducing the need for unpredictable branching.
 
 \subsubsection{Node Encoding and Trie Identification}
 We identify (sub-)tries as the hash of their root node, with one exception: empty (sub-)tries are identified as the zero-hash, $\H^0$.
@@ -79,9 +79,9 @@ Formally, we define the encoding functions $B$ and $L$:
   \end{aligned}\right.
 \end{align}
 
-We may then define, the Merklization function $\mathcal{M}_S$ is as:
+We may then define the basic Merklization function $\mathcal{M}_\sigma$ as:
 \begin{align}
-  \mathcal{M}_S(\sigma) &\equiv M(\{ (\text{bits}(k) \mapsto \tup{k, v}) \mid (k \mapsto v) \in T(\sigma) \})\\
+  \mathcal{M}_\sigma(\sigma) &\equiv M(\{ (\text{bits}(k) \mapsto \tup{k, v}) \mid (k \mapsto v) \in T(\sigma) \})\\
   M(d: \dict{\mathbb{B}}{(\H, \Y)}) &\equiv \begin{cases}
     \H^0 &\when |d| = 0\\
     \mathcal{H}(\text{bits}^{-1}(L(k, v))) &\when \mathcal{V}(d) = \{ (k, v) \}\\
@@ -92,3 +92,143 @@ We may then define, the Merklization function $\mathcal{M}_S$ is as:
   \end{cases}
 \end{align}
 
+\section{General Merklization}\label{sec:merklization}
+
+\subsection{Binary Merkle Trees}
+
+The Merkle tree is a cryptographic data structure yielding a hash commitment to a specific sequence of values. It provides $O(N)$ computation and $O(\log(N))$ proof size for inclusion. This \emph{well-balanced} formulation ensures that the maximum depth of any leaf is minimal and that the number of leaves at that depth is also minimal.
+
+The underlying function for our Merkle trees is the \emph{node} function $N$, which accepts some sequence of blobs of some length $n$ and provides either such a blob back or a hash:
+\begin{equation}
+  N\colon\left\{\begin{aligned}
+    (\seq{\Y_n}, \Y \to \H) &\to \Y_n \cup \H \\
+    (\mathbf{v}, H) &\mapsto \begin{cases}
+      \H_0 &\when |\mathbf{v}| = 0 \\
+      \mathbf{v}_0 &\when |\mathbf{v}| = 1 \\
+      H(\token{\$node} \concat N(\mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}}) \concat N(\mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots})) &\otherwise
+    \end{cases}
+  \end{aligned}\right.\label{eq:merklenode}
+\end{equation}
+
+The astute reader will realize that if our $\Y_n$ happens to be equivalent $\H$ then this function will always evaluate into $\H$. That said, for it to be secure care must be taken to ensure there is no possibility preimage collision. For this purpose we include the hash prefix $\token{\$node}$ to minimize the chance of this; simply ensure any items are hashed with a different prefix and the system can be considered secure.
+
+We also define the \emph{trace} function $T$, which returns each opposite node from top to bottom as the tree is navigated to arrive at some leaf corresponding to the item of a given index into the sequence. It is useful in creating justifications of data inclusion.
+\begin{equation}
+  \begin{aligned}
+    T\colon\left\{\begin{aligned}
+      (\seq{\Y_n}, \N_{|\mathbf{v}|}, \Y \to \H)\ &\to \seq{\Y_n \cup \H}\\
+      (\mathbf{v}, i, H) &\mapsto [N(P^\bot(\mathbf{v}, i))] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H)
+    \end{aligned}\right.\\
+    \where\ \left\{\begin{aligned}
+      P^s(\mathbf{v}, i) &\equiv \begin{cases}
+        \mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}} &\when (i < \ceil{\nicefrac{|\mathbf{v}|}{2}}) = s\\
+        \mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots} &\otherwise
+      \end{cases}\\
+      P_I(\mathbf{v}, i) &\equiv \begin{cases}
+        0 &\when i < \ceil{\nicefrac{|\mathbf{v}|}{2}} \\
+        \ceil{\nicefrac{|\mathbf{v}|}{2}} &\otherwise
+      \end{cases}
+    \end{aligned}\right.
+  \end{aligned}
+\end{equation}
+
+From this we define our other Merklization functions.
+
+\subsubsection{Well-Balanced Tree}
+We define the well-balanced binary Merkle function as $\mathcal{M}_B$:
+\begin{equation}
+    \mathcal{M}_B\colon \left\{\begin{aligned}\label{eq:simplemerkleroot}
+      (\seq{\Y_{n < 32}}, \Y \to \H) &\to \H \\
+      (\mathbf{v}, H) &\mapsto \begin{cases}
+        H(\mathbf{v}_0) &\when |\mathbf{v}| = 1 \\
+        N(\mathbf{v}, H) &\otherwise
+      \end{cases} \\
+    \end{aligned}\right.
+\end{equation}
+
+This is suitable for creating proofs on data which is less than 32 bytes in length since it avoids hashing each item in the sequence. For sequences with larger data items, it is better to hash them beforehand to ensure proof-size is minimal since each proof will generally contain a data item.
+
+Note: In the case that no hash function argument $H$ is supplied, we may assume the Blake 2b hash function, $\mathcal{H}$.
+
+\subsubsection{Constant-Depth Tree}
+We define the constant-depth binary Merkle function as $\mathcal{M}$ and the corresponding justification generation function as $\mathcal{J}$, with the latter having an optional subscript $x$, which limits the justification to only those nodes required to justify inclusion of a well-aligned subtree of (maximum) size $2^x$:
+\begin{align}\label{eq:constantdepthmerkleroot}
+  \mathcal{M}&\colon \left\{\begin{aligned}
+    (\seq{\Y}, \Y \to \H) &\to \H\\
+    (\mathbf{v}, H) &\mapsto N(C(\mathbf{v}), H)
+  \end{aligned}\right.\\
+  \mathcal{J}&\colon \left\{\begin{aligned}\label{eq:constantdepthmerklejust}
+    (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \H\\
+    (\mathbf{v}, i, H) &\mapsto \raisebox{5pt}{$\smallfrown$}(T(C(\mathbf{v}), i, H))
+  \end{aligned}\right.\\
+  \mathcal{J}_x&\colon \left\{\begin{aligned}\label{eq:constantdepthsubtreemerklejust}
+    (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \H\\
+    (\mathbf{v}, i, H) &\mapsto \raisebox{5pt}{$\smallfrown$}(T(C(\mathbf{v}), i, H)_{\dots\max(0, \ceil{\log_2(|\mathbf{v}|) - x})})
+  \end{aligned}\right.
+\end{align}
+
+For the latter justification to be acceptable, we must assume the target observer knows not merely the value of the item at the given index, but also all other items within its $2^x$ size subtree.
+
+As above, we may assume a default value for $H$ of the Blake 2b hash function, $\mathcal{H}$.
+
+In all cases, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix and then pads them to the next power of two with the zero hash:
+\begin{equation}
+  C\colon\left\{\begin{aligned}
+    (\seq{\Y}, \Y \to \H) &\to \seq{\H}\\
+    (\mathbf{v}, H) &\mapsto \mathbf{v}' \ \where \left\{\; \begin{aligned}
+      |\mathbf{v}'| &= 2^{\ceil{\log_2(|\mathbf{v}|)}}\\
+      \mathbf{v}'_i &= \begin{cases}
+        H(\token{\$leaf}\frown\mathbf{v}_i) &\when i < |\mathbf{v}|\\
+        H_0 &\otherwise \\
+      \end{cases}
+    \end{aligned}\right.
+  \end{aligned}\right.
+\end{equation}
+
+\subsection{Merkle Mountain Ranges}\label{sec:mmr}
+
+The Merkle mountain range (\textsc{mmr}) is an append-only cryptographic data structure which yields a commitment to a sequence of values. Appending to an \textsc{mmr} and proof of inclusion of some item within it are both $O(\log(N))$ in time and space for the size of the set.
+
+We define a Merkle mountain range as being within the set $\seq{\H?}$, a sequence of peaks, each peak the root of a Merkle tree containing $2^i$ items where $i$ is the index in the sequence. Since we support set sizes which are not always powers-of-two-minus-one, some peaks may be empty, $\none$ rather than a Merkle root.
+
+Since the sequence of hashes is somewhat unwieldy as a commitment, Merkle mountain ranges are themselves generally hashed before being published. Hashing them removes the possibility of further appending so the range itself is kept on the system which needs to generate future proofs.
+
+\newcommand*{\deffunc}[1]{\left\{\,\begin{aligned}#1\vphantom{x'_i}\end{aligned}\right.}
+
+We define the append function $\mathcal{A}$ as:
+\begin{equation}
+  \begin{aligned}
+    \label{eq:mmrappend}
+    \mathcal{A}&\colon\deffunc{
+      (\seq{\H?}, \H, \Y\to\H) &\to \seq{\H?}\\
+      (\mathbf{r}, l, H) &\mapsto P(\mathbf{r}, l, 0, H)
+    }\\
+    \where P&\colon\deffunc{
+      (\seq{\H?}, \H, \N, \Y\to\H) &\to \seq{\H?}\\
+      (\mathbf{r}, l, n, H) &\mapsto \begin{cases}
+        \mathbf{r} \doubleplus l &\when n \ge |\mathbf{r}|\\
+        R(\mathbf{r}, n, l) &\when n < |\mathbf{r}| \wedge \mathbf{r}_n = \none\\
+        P(R(\mathbf{r}, n, \none), H(\mathbf{r}_n \concat l), n + 1, H) &\otherwise
+      \end{cases}
+    }\\
+    \also R&\colon\deffunc{
+      (\seq{T}, \N, T) &\to \seq{T}\\
+      (\mathbf{s}, i, v) &\mapsto \mathbf{s}'\ \where \mathbf{s}' = \mathbf{s} \exc \mathbf{s}'_i = v
+    }
+  \end{aligned}
+\end{equation}
+
+We define the \textsc{mmr} encoding function as $\se_M$:
+\begin{equation}
+  \se_M\colon\deffunc{
+    \seq{\H?} &\to \H \\
+    \mathbf{b} &\mapsto \se(\var{[\maybe{x}\mid x \orderedin \mathbf{b}]})
+  }
+\end{equation}
+
+%\begin{equation}
+%  \left\{\mathbb{H}\right.
+%\end{equation}
+%\begin{equation}
+%  \left\{\,\begin{aligned} & (\mathbb{H}) \\ & \begin{cases}x&y\end{cases} \end{aligned}\right.
+%\end{equation}
