--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -152,20 +152,24 @@ The definition here is staged over several functions for ease of reading. The fi
 The third and forth definition are helper terms for this, with the third performing an ordered accumulation (\ie counter) in order to ensure that the Refine function has access to the total number of exports made from the work package up to the current work-item. The fourth term, $R$, is essentially just a call to the Refine function, marshalling the relevant data from the work-package and work-item.
 
 The above relies on two functions, $M$ and $X$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $i$:
-\begin{align*}
-  M(i \in \mathbb{I}) &\equiv [\overline{\mathbf{s}}[j] \mid (\mathcal{M}(\overline{\mathbf{s}}), j) \orderedin i_\mathbf{i}] \\
-  X(i \in \mathbb{I}) &\equiv [\mathbf{s} \mid \mathcal{H}(\mathbf{s}) \orderedin i_\mathbf{x}]
-\end{align*}
+\begin{equation}
+  \begin{aligned}
+    M(i \in \mathbb{I}) &\equiv [\mathbf{s}[n] \mid (\mathcal{M}(\mathbf{s}), n) \orderedin i_\mathbf{i}] \\
+    X(i \in \mathbb{I}) &\equiv [x \mid \mathcal{H}(x) \orderedin i_\mathbf{x}]
+  \end{aligned}
+\end{equation}
 
-Meanwhile $s$ is defined as the data specification of the package, using the ``segments-root'' function $A$ and drawing upon $M$, the imports-lookup function and $X$, the extrinsic data lookup function:
-\begin{align*}
-  s &= A(\se(\var{\mathbf{p}}, \mathbf{x}, \mathbf{i}, \mathbf{j}), \wideparen{\overline{\mathbf{e}}}) \\
-  \where \mathbf{x} &= [[\var{\se(\mathbf{x})} \mid \mathbf{x} \in X(i)] \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
-  \also \mathbf{i} &= [M(i) \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
-  \also \mathbf{j} &= [\mathcal{J}(\mathbf{s}, n) \mid (\mathcal{M}(\mathbf{s}), n) \orderedin i_\mathbf{i}, i \orderedin \mathbf{p}_\mathbf{i}]
-\end{align*}
+We may then define $s$ as the data availability specification of the package using these two functions together with the yet to be defined \emph{Availability Specifier} function $A$ (see section \ref{sec:availabiltyspecifier}):
+\begin{equation}
+  \begin{aligned}
+    s &= A(\se(\var{\mathbf{p}}, \mathbf{x}, \mathbf{i}, \mathbf{j}), \wideparen{\overline{\mathbf{e}}}) \\
+    \nonumber \where \mathbf{x} &= [[\var{\se(\mathbf{x})} \mid \mathbf{x} \in X(i)] \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
+    \nonumber \also \mathbf{i} &= [M(i) \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
+    \nonumber \also \mathbf{j} &= [\mathcal{J}(\mathbf{s}, n) \mid (\mathcal{M}(\mathbf{s}), n) \orderedin i_\mathbf{i}, i \orderedin \mathbf{p}_\mathbf{i}]
+  \end{aligned}
+\end{equation}
 
-Note that while $M$ and $\mathbf{j}$ are both formulated using the term $\mathbf{s}$ (the full set of segments yielded alongside each segment to be imported) this value is not generally needed as the justification can be derived through a single paged-proof. This reduces the worst case data fetching for a guarantor to two segments for every one to be imported. In the case that contiguously exported segments are imported (which we might assume is a fairly common situation), then a single proof-page should be sufficient to justify many imported segments.
+Note that while $M$ and $\mathbf{j}$ are both formulated using the term $\mathbf{s}$ (all segments exported by all work packages exporting a segment to be imported) such a vast amount of data is not generally needed as the justification can be derived through a single paged-proof. This reduces the worst case data fetching for a guarantor to two segments for every one to be imported. In the case that contiguously exported segments are imported (which we might assume is a fairly common situation), then a single proof-page should be sufficient to justify many imported segments.
 
 The Is-Authorized logic it references is first executed to ensure that the work-package warrants the needed core-time. Next, the guarantor should ensure that all segment-tree roots which form imported segment commitments are known and have not expired. Finally, the guarantor should ensure that they can fetch all preimage data referenced as the commitments of extrinsic segments.
 
@@ -175,27 +179,32 @@ Validators, in their role as availability assurers, should index such chunks acc
 
 %TODO: Make result an error if the number of exported segments > stated number of exports. (If less, then additional ones are assumed to be zeroed.)
 
-We define the segment-root function used for making a commitment to the exported segments. The sequence is simply the sub-sequence from each work-item concatenated together in the order of said work-items.
-
-We define the availability specifier function $A$, which creates an availability specifier from an octet sequence of the audit-friendly work-package bundle (comprising the work-package itself, the extrinsic data and the concatenated import segments along with their proofs of correctness), and a sequence of segments for each exported segment alluded to in the manifest:
+\subsubsection{Availability Specifier}\label{sec:availabiltyspecifier}
+We define the availability specifier function $A$, which creates an availability specifier from an octet sequence of the audit-friendly work-package bundle (comprising the work-package itself, the extrinsic data and the concatenated import segments along with their proofs of correctness), and the sequence of exported segments:
 \begin{equation}
   \!\!\!A\colon\left\{\,\begin{aligned}
     &\tuple{\Y, \seq{\G}} \to \mathbb{S}\\
-    &\tup{\mathbf{b}, \mathbf{e}} \mapsto \tup{h,\is{l}{|\mathbf{b}|},u,\ \is{e}{\mathcal{M}(\mathbf{e})}
+    &\tup{\mathbf{b},\,\mathbf{s}} \mapsto \tup{
+      \is{h}{\mathcal{H}(\mathbf{b})},\,
+      \is{l}{|\mathbf{b}|},\,
+      u,\,
+      \is{e}{\mathcal{M}(\mathbf{s})}
     }
   \end{aligned}\right.\!\!\!\!\!
 \end{equation}
 \begin{align*}
-  \where u &= \mathcal{M}_S(
-    [\wideparen{\mathbf{j}} \mid \mathbf{j} \in \transpose[\mathbf{b}^\clubsuit, \mathbf{e}^\clubsuit]]
+  \where u &= \mathcal{M}_B(
+    [\wideparen{\mathbf{x}} \mid \mathbf{x} \in \transpose[\mathbf{b}^\clubsuit, \mathbf{s}^\clubsuit]]
   )\\
   \also \mathbf{b}^\clubsuit &= \mathcal{H}^\#(\mathcal{C}_{\ceil{\nicefrac{|\mathbf{b}|}{\mathsf{W}_C}}}(\mathcal{P}_{\mathsf{W}_C}(\mathbf{b})))\\
-  \also \mathbf{e}^\clubsuit &= \mathcal{M}_S^\#(\transpose\mathcal{C}^\#_6(\mathbf{e} \concat P(\mathbf{e})))
+  \also \mathbf{s}^\clubsuit &= \mathcal{M}_B^\#(\transpose\mathcal{C}^\#_6(\mathbf{s} \concat P(\mathbf{s})))
 \end{align*}
+
+% TODO: \mathbb{S}_h is now the hash of the work-package bundle, not the work-package itself. This is a change from the original document... does anything break with it?
 
 The paged-proofs function $P$, defined earlier in equation \ref{eq:pagedproofs}, accepts a sequence of segments and returns a sequence of paged-proofs sufficient to justify the correctness of every segment. There are exactly $\ceil{\nicefrac{1}{64}}$ paged-proof segments as the number of yielded segments, each composed of a page of 64 hashes of segments, together with a Merkle proof from the root to the subtree-root which includes those 64 segments.
 
-The functions $\mathcal{M}$ and $\mathcal{M}_S$ are the fixed-depth and simple binary Merkle root functions, defined in equations \ref{eq:constantdepthmerkleroot} and \ref{eq:simplemerkleroot}. The function $\mathcal{C}$ is the erasure-coding function, defined in appendix \ref{sec:erasurecoding}.
+The functions $\mathcal{M}$ and $\mathcal{M}_B$ are the fixed-depth and simple binary Merkle root functions, defined in equations \ref{eq:constantdepthmerkleroot} and \ref{eq:simplemerkleroot}. The function $\mathcal{C}$ is the erasure-coding function, defined in appendix \ref{sec:erasurecoding}.
 
 And $\mathcal{P}$ is the zero-padding function to take an octet array to some multiple of $n$ in length:
 \begin{equation}\label{eq:zeropadding}
