--- a/preamble.tex
+++ b/preamble.tex
@@ -71,6 +71,7 @@
 \newcommand*\rem{\ \text{\scriptsize{\%}}\ }
 \newcommand*\remainder{\text{\hspace{2pt}\footnotesize{\textsf{R}}\hspace{2pt}}}
 \newcommand*\fold{\ \thicksim\mathchoice{\!\!\!\!\!\!\!}{\!\!\!\!\!\!}{\!\!\!\!\!\!}{\!\!\!\!\!\!}\int}
+\newcommand*{\powset}[2][{}]{\wp\left\langle#2\right\rangle_{#1}}
 \newcommand*{\sig}[2]{\mathbb{E}_{#1}\langle#2\rangle}
 \newcommand*{\bandersnatch}[3]{\bar{\mathbb{F}}_{#1}^{#3}\langle#2\rangle}
 \newcommand*{\bandersig}[3]{\mathbb{F}_{#1}^{#3}\langle#2\rangle}
@@ -136,7 +137,7 @@
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
 
-\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.0 Tokyo - \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.0 Tokyo - \today}}
+\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.1 \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.1 \today}}
 \author{
   Dr. Gavin Wood\\
   Founder, Polkadot \& Ethereum\\%, Parity, Web3 Foundation, Fellowship\\
