--- a/biblio.bib
+++ b/biblio.bib
@@ -241,10 +241,13 @@
   school={OST Ostschweizer Fachhochschule}
 }
 
-@article{stewart2018efficient,
-    title={Efficient Block-Auditing for Blockchains},
-    author={Alistair Stewart},
-    year={2018},
+@misc{cryptoeprint:2024/961,
+      author = {Burdges, Jeff and Cevallos, Alfonso and Kılınç Alper, Handan and Liu-Zhang, Chen-Da and Shirazi, Fatemeh and Stewart, Alistair and Habermeier, Rob and Klotzner, Robert and Ordian, Andronik},
+      title = {Efficient Execution Auditing for Blockchains under Byzantine Assumptions},
+      howpublished = {Cryptology ePrint Archive, Paper 2024/961},
+      year = {2024},
+      note = {\url{https://eprint.iacr.org/2024/961}},
+      url = {https://eprint.iacr.org/2024/961}
 }
 
 @inproceedings{bertoni2013keccak,
