Safrole tickets context and Ring commitment  (#13)
* Nitpicks

* Fix ring root set

* Tickets generation signing context required to be equal to primary sealing context to generate the same output

* Fix KZG commitment size

* Fill the dots

* Update safrole.tex

* Update safrole.tex

* Update safrole.tex

---------

Co-authored-by: Gavin Wood <gavin@parity.io>

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -45,7 +45,6 @@
   \begin{description}
     \item[$\H_B$] The set of Bandersnatch public keys. A subset of $\Y_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
     \item[$\H_E$] The set of Ed25519 public keys. A subset of $\Y_{32}$. See section \ref{sec:signing}.
-    \item[$\Y_R$] The set of Bandersnatch ring roots. A subset of $\Y_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
   \item[$\mathbb{I}$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\mathbb{J}$] The set of work execution errors.
@@ -64,7 +63,7 @@
   \item[$\Y$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
   \begin{description}
     \item[$\Y_{BLS}$] The set of BLS public keys. A subset of $\Y_{144}$. See section \ref{sec:signing}.
-    \item[$\Y_R$] The set of Bandersnatch ring roots. A subset of $\Y_{196608}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\Y_R$] The set of Bandersnatch ring roots. A subset of $\Y_{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
 \end{description}
 
@@ -281,8 +280,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{X}_F = \token{\$jam\_fallback\_seal}$] \emph{Bandersnatch} Fallback block seal.
   \item[$\mathsf{X}_G = \token{\$jam\_guarantee}$] \emph{Ed25519} Guarantee statements.
   \item[$\mathsf{X}_I = \token{\$jam\_announce}$] \emph{Ed25519} Audit announcement statements.
-  \item[$\mathsf{X}_S = \token{\$jam\_seal}$] \emph{Bandersnatch} Regular block seal.
-  \item[$\mathsf{X}_T = \token{\$jam\_ticket}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation.
+  \item[$\mathsf{X}_T = \token{\$jam\_ticket\_seal}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation and regular block seal.
   \item[$\mathsf{X}_U = \token{\$jam\_audit}$] \emph{Bandersnatch} Audit selection entropy.
   \item[$\mathsf{X}_\top = \token{\$jam\_valid}$] \emph{Ed25519} Judgements for valid work-reports.
   \item[$\mathsf{X}_\bot = \token{\$jam\_invalid}$] \emph{Ed25519} Judgements for invalid work-reports.
