--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -156,13 +156,13 @@ We define the permute function $P$, the rotation function $R$ and finally the gu
 \begin{align}
   P(e, t) &\equiv R\left(\mathcal{F}\left(\left[\ffrac{\mathsf{V}\cdot i}{\mathsf{C}} \,\middle\mid\, i \orderedin \N_\mathsf{V}\right], e\right), \ffrac{t \bmod \mathsf{E}}{\mathsf{R}}\right)\!\!\!\!\!\! \\[3pt]
   R(\mathbf{c}, n) &\equiv [(x + n) \bmod \mathsf{C} \mid x \orderedin \mathbf{c}]\\
-  \forall c \in \N_C : \mathbf{G} &\equiv [ \kappa'_i \mid i \orderedin \N_V, P(\eta_2', \tau')_i = c ]
+  \forall c \in \N_C : \mathbf{G} &\equiv [ \kappa'_i \mid i \orderedin \N_\mathsf{V}, P(\eta_2', \tau')_i = c ]
 \end{align}
 
 We also define $\mathbf{G}^*$, which is equivalent to the value $\mathbf{G}$ as it would have been under the previous rotation:
 \begin{align}
   \label{eq:priorassignments}
-  \forall c \in \N_C : \mathbf{G}^* &\equiv [ \mathbf{k}_i \mid i \orderedin \N_V, P(e, \tau' - \mathsf{R})_i = c ]\\
+  \forall c \in \N_C : \mathbf{G}^* &\equiv [ \mathbf{k}_i \mid i \orderedin \N_\mathsf{V}, P(e, \tau' - \mathsf{R})_i = c ]\\
   \where e &= \begin{cases}
     (\eta'_2, \kappa) &\when \displaystyle\ffrac{\tau' - \mathsf{R}}{\mathsf{E}} = \ffrac{\tau'}{\mathsf{E}}\\
     (\eta'_3, \lambda) &\otherwise
