--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -49,7 +49,7 @@ We define $\mathbf{J}$ as the sequence of judgements introduced in the block's e
 
 Formally:
 \begin{align}
-  \mathbf{J} &\in \seq{\tup{\H, \seq{\H_B}_{2:3}, \N}} \\
+  \mathbf{J} &\in \seq{\tup{\H, \N}} \\
   \mathbf{J} &= \sq{\tup{r, \sum_{\tup{v, i, s} \in \mathbf{v}}\!\!\!\! v}\ \middle\mid\ \tup{r, \mathbf{v}} \orderedin \mathbf{E}_J} \\
   &\forall \tup{r, t} \in \mathbf{J} : t \in \{0, \floor{\nicefrac{1}{3}\mathsf{V}}, \floor{\nicefrac{2}{3}\mathsf{V}} + 1 \}
 \end{align}
