--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -277,7 +277,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
 \begin{description}
   \item[$\mathsf{X}_A = \token{\$jam\_available}$] \emph{Ed25519} Availability assurances.
   \item[$\mathsf{X}_B = \token{\$jam\_beefy}$] \emph{\textsc{bls}} Accumulate-result-root-\textsc{mmr} commitment.
-  \item[$\mathsf{X}_E = \token{\$jam\_entropy}$] On-chain entropy generation context.
+  \item[$\mathsf{X}_E = \token{\$jam\_entropy}$] On-chain entropy generation.
   \item[$\mathsf{X}_F = \token{\$jam\_fallback\_seal}$] \emph{Bandersnatch} Fallback block seal.
   \item[$\mathsf{X}_G = \token{\$jam\_guarantee}$] \emph{Ed25519} Guarantee statements.
   \item[$\mathsf{X}_I = \token{\$jam\_announce}$] \emph{Ed25519} Audit announcement statements.
