--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -12,7 +12,7 @@ The service account is defined as the tuple of storage dictionary $\mathbf{s}$, 
 \begin{align}\label{eq:serviceaccount}
   \mathbb{A} \equiv \ltuple\ \begin{aligned}
   \mathbf{s} &\in \dict{\H}{\Y}\ ,\qquad \mathbf{p} \in \dict{\H}{\Y}\ ,\\
-  \mathbf{l} &\in \dict{\ltuple\H\ts\N_L\rtuple}{[\N_T]_{:3}}\ ,\\
+  \mathbf{l} &\in \dict{\ltuple\H\ts\N_L\rtuple}{\seq{\N_T}_{:3}}\ ,\\
   c &\in \H\ ,\quad b \in \N_B\ ,\quad  g \in \Z_G\ ,\quad m \in \Z_G
 \end{aligned}\,\rtuple
 \end{align}
